--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.13.3",
     "morgan": "^1.6.1",
     "nodemon": "^1.4.0",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "underscore": "^1.8.3"
   }
 }
